@@ -1,6 +1,7 @@
 package uk.gov.hmcts.reform.prl.services;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
@@ -13,12 +14,12 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.services.validators.EventCheckerHelper.allNonEmpty;
 
 @Service
+@Slf4j
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class ReturnApplicationService {
 
@@ -32,7 +33,7 @@ public class ReturnApplicationService {
                 List<PartyDetails> applicants = applicantsWrapped.get()
                     .stream()
                     .map(Element::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
 
                 String legalFirstName = applicants.get(0).getRepresentativeFirstName();
                 String legalLastName = applicants.get(0).getRepresentativeLastName();
@@ -75,16 +76,12 @@ public class ReturnApplicationService {
             .append("Case name: " + caseData.getApplicantCaseName() + "\n")
             .append("Reference code: " + caseData.getId() + "\n\n")
             .append("Dear " + getLegalFullName(caseData) + ",\n\n")
-            .append("Thank you for your application."
-                        + " Your application has been reviewed and is being returned for the following reasons:" + "\n\n");
+            .append("Thank you for your application. Your application has been reviewed and is being returned for the following reasons:\n\n");
+
         if (PrlAppsConstants.C100_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())) {
-            for (RejectReasonEnum reasonEnum : caseData.getRejectReason()) {
-                returnMsgStr.append(reasonEnum.getReturnMsgText());
-            }
+            returnMessageC100(caseData, returnMsgStr);
         } else if (PrlAppsConstants.FL401_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())) {
-            for (FL401RejectReasonEnum reasonEnum : caseData.getFl401RejectReason()) {
-                returnMsgStr.append(reasonEnum.getReturnMsgText());
-            }
+            returnMessageFl401(caseData, returnMsgStr);
         }
 
         returnMsgStr.append("Please resolve these issues and resubmit your application.\n\n")
@@ -95,13 +92,33 @@ public class ReturnApplicationService {
 
     }
 
+    private void returnMessageC100(CaseData caseData, StringBuilder returnMsgStr) {
+        List<RejectReasonEnum> sortedRejectReason = caseData.getRejectReason().stream().sorted().toList();
+        for (RejectReasonEnum reasonEnum : sortedRejectReason) {
+            returnMsgStr.append(reasonEnum.getReturnMsgText());
+        }
+    }
+
+    private void returnMessageFl401(CaseData caseData, StringBuilder returnMsgStr) {
+        List<FL401RejectReasonEnum> sortedFl401RejectReason = caseData.getFl401RejectReason().stream().sorted().toList();
+        for (FL401RejectReasonEnum reasonEnum : sortedFl401RejectReason) {
+            returnMsgStr.append(reasonEnum.getReturnMsgText());
+        }
+    }
+
     public String getReturnMessageForTaskList(CaseData caseData) {
         StringBuilder returnMsgStr = new StringBuilder();
         returnMsgStr.append("                            \n\n");
-        returnMsgStr.append("<div class='govuk-warning-text'><span class='govuk-warning-text__icon'>!"
-                                + "</span><strong class='govuk-warning-text__text'>Application has been returned</strong></div>" + "\n\n");
+        returnMsgStr.append("""
+                                <div class='govuk-warning-text'><span class='govuk-warning-text__icon'>!</span>
+                                <strong class='govuk-warning-text__text'>Application has been returned</strong></div>
 
-        returnMsgStr.append("Your application has been  returned for the following reasons:" + "\n\n");
+                                """);
+
+        returnMsgStr.append("""
+                                Your application has been returned for the following reasons:
+
+                                """);
 
         if (PrlAppsConstants.C100_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())) {
             for (RejectReasonEnum reasonEnum : caseData.getRejectReason()) {
@@ -116,8 +133,9 @@ public class ReturnApplicationService {
             }
         }
 
-        returnMsgStr.append("Resolve these concerns and resend your application."
-                                + "You have been emailed the full details of your application return.");
+        returnMsgStr.append("""
+                                Resolve these concerns and resend your application.
+                                You have been emailed the full details of your application return.""");
 
         return returnMsgStr.toString();
 
