@@ -14,7 +14,6 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
@@ -35,12 +34,13 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
 
         // Checking the Child details. It is only for C100 applications
         if (C100_CASE_TYPE.equals(caseData.getCaseTypeOfApplication())
-            && (validateChildrensDetails(caseData) || validateApplicantForCA(caseData))) {
+            && (validateChildrensDetails(caseData) || validateApplicantForCA(caseData) || validateRespondentConfidentialDetailsCA(caseData))) {
             return YesOrNo.Yes.getDisplayedValue();
         }
 
         if (FL401_CASE_TYPE.equals(caseData.getCaseTypeOfApplication())
-            && (validateApplicantForDA(caseData) || validateHomeConfidentialDetails(caseData))) {
+            && (validateApplicantForDA(caseData) || validateHomeConfidentialDetails(caseData)
+            || validateRespondentConfidentialDetailsDA(caseData))) {
             return YesOrNo.Yes.getDisplayedValue();
         }
 
@@ -53,7 +53,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             Optional<List<Element<ChildrenLiveAtAddress>>> childrenAddress = ofNullable(homeOptional.get().getChildren());
             if (childrenAddress.isPresent()) {
                 List<ChildrenLiveAtAddress> childrenLiveAtAddressList = childrenAddress.get().stream().map(Element::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
                 if (childrenLiveAtAddressList.stream().anyMatch(childAddress -> YesOrNo.Yes.equals(childAddress.getKeepChildrenInfoConfidential()))) {
                     return true;
                 }
@@ -71,7 +71,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             List<Child> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (Child c : children) {
                 if (YesOrNo.Yes.equals(c.getIsChildAddressConfidential())) {
@@ -82,7 +82,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
                     List<OtherPersonWhoLivesWithChild> otherPersonList = otherPersonWrapped.get()
                         .stream()
                         .map(Element::getValue)
-                        .collect(Collectors.toList());
+                        .toList();
                     boolean isConfidentialDetailsAvaialble = otherPersonList.stream()
                         .anyMatch(eachPerson -> YesOrNo.Yes.equals(eachPerson.getIsPersonIdentityConfidential()));
                     if (isConfidentialDetailsAvaialble) {
@@ -111,7 +111,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             List<PartyDetails> applicants = applicantsWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (PartyDetails applicant : applicants) {
                 if (YesOrNo.Yes.equals(applicant.getIsAddressConfidential())
@@ -130,4 +130,41 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
         }
         return false;
     }
+
+    private boolean validateRespondentConfidentialDetailsCA(CaseData caseData) {
+        // Checking the Respondent Details..
+        Optional<List<Element<PartyDetails>>> respondentsWrapped = ofNullable(caseData.getRespondents());
+
+        if (!respondentsWrapped.isEmpty() && !respondentsWrapped.get().isEmpty()) {
+            List<PartyDetails> respondents = respondentsWrapped.get()
+                .stream()
+                .map(Element::getValue)
+                .toList();
+
+            for (PartyDetails respondent : respondents) {
+                if (YesOrNo.Yes.equals(respondent.getIsAddressConfidential())
+                    || YesOrNo.Yes.equals(respondent.getIsPhoneNumberConfidential())
+                    || YesOrNo.Yes.equals(respondent.getIsEmailAddressConfidential())) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private boolean validateRespondentConfidentialDetailsDA(CaseData caseData) {
+        // Checking the Respondent Details..
+        Optional<PartyDetails> flRespondents = ofNullable(caseData.getRespondentsFL401());
+        if (flRespondents.isPresent()) {
+            PartyDetails partyDetails = flRespondents.get();
+            if (YesOrNo.Yes.equals(partyDetails.getIsAddressConfidential())
+                || YesOrNo.Yes.equals(partyDetails.getIsPhoneNumberConfidential())
+                || YesOrNo.Yes.equals(partyDetails.getIsEmailAddressConfidential())) {
+                return true;
+            }
+
+        }
+        return false;
+    }
+
 }
